# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("root") {
  testonly = true

  deps = [
    "//mojo",
    "//sky",
  ]
  if (!is_android && !is_win) {
    deps += [ "//tools/xdisplaycheck" ]
  }
}
