# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/ui.gni")

group("examples") {
  testonly = true

  deps = [
    "//examples/apptest",
    "//examples/content_handler_demo",
    "//examples/echo",
    "//examples/http_server",
    "//examples/png_viewer",
    "//examples/sample_app",
    "//examples/surfaces_app",
    "//examples/wget",
  ]

  if (use_aura) {
    deps += [
      "//examples/aura_demo:aura_demo",
      "//examples/browser",
      "//examples/embedded_app",
      "//examples/media_viewer",
      "//examples/nesting_app",
      "//examples/keyboard",
      "//examples/window_manager",
      "//examples/wm_flow",
    ]
  }

  if (!is_android) {
    "//examples/pdf_viewer",  
  }
}
