# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("startup") {
  testonly = true

  deps = [
    ":app",
    ":noop",
  ]
}

shared_library("app") {
  output_name = "mojo_benchmark_startup"
  testonly = true

  sources = [ "startup.cc" ]

  deps = [
    "//mojo/public/c/system:for_shared_library",
  ]
}

executable("noop") {
  output_name = "mojo_benchmark_startup_noop"
  testonly = true

  sources = [ "noop.cc" ]
}
