# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/mojo_application.gni")
import("//mojo/public/tools/bindings/mojom.gni")

group("echo") {
  deps = [
    ":client",
    ":service"
  ]
}

mojo_native_application("client") {
  output_name = "echo_client"

  deps = [
    ":bindings",
    "//mojo/public/c/system:for_shared_library",
    "//mojo/public/cpp/application:standalone",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/utility",
  ]

  sources = [ "echo_client.cc" ]
}

mojo_native_application("service") {
  output_name = "echo_service"

  deps = [
    ":bindings",
    "//mojo/public/c/system:for_shared_library",
    "//mojo/public/cpp/application:standalone",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/utility",
  ]

  sources = [ "echo_service.cc" ]
}

mojom("bindings") {
  sources = [ "echo_service.mojom" ]
}
