# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/mojo_application.gni")

mojo_native_application("nesting_app") {
  sources = [
    "nesting_app.cc"
  ]

  deps = [
    "//base",
    "//examples/bitmap_uploader",
    "//examples/window_manager:bindings",
    "//mojo/application",
    "//mojo/public/c/system:for_shared_library",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/utility",
    "//mojo/services/public/cpp/view_manager",
    "//mojo/services/public/interfaces/geometry",
    "//mojo/services/public/interfaces/navigation",
    "//skia",
    "//ui/events:events_base",
    "//ui/gfx/geometry",
    "//ui/gl",
    "//url",
  ]
}
