# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("dart") {
  deps = [
    ":testing",
  ]
}


copy("testing") {
  sources = [
    "test/codec_test.dart",
    "testing/expect.dart",
  ]
  outputs = [
    "{{source_gen_dir}}/{{source_file_part}}"
  ]
}
