# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/tools/bindings/mojom.gni")

source_set("spy") {
  sources = [
    "common.h",
    "spy.cc",
    "spy.h",
    "spy_server_impl.h",
    "spy_server_impl.cc",
  ]

  deps = [
    ":spy_bindings",
    "//base",
    "//url",
    "//mojo/application_manager",
  ]
}

mojom("spy_bindings") {
  sources = [
    "public/spy.mojom",
  ]
}
