# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/mojo_application.gni")

group("js") {
  deps = [
    ":js_content_handler",
  ]
}

mojo_native_application("js_content_handler") {
  sources = [
    "content_handler_main.cc",
    "js_app.cc",
    "js_app.h",
    "mojo_bridge_module.cc",
    "mojo_bridge_module.h",
  ]

  deps = [
    "//base:i18n",
    "//mojo/application",
    "//mojo/application:application",
    "//mojo/application:content_handler",
    "//mojo/edk/js/",
    "//mojo/environment:chromium",
    "//mojo/public/c/system:for_shared_library",
    "//mojo/public/cpp/utility",
    "//mojo/services/public/interfaces/content_handler",
  ]
}

test("js_services_unittests") {
  deps = [
    "//base",
    "//gin:gin_test",
    "//mojo/edk/js",
    "//mojo/edk/test:run_all_unittests",
    "//mojo/edk/test:test_support",
    "//mojo/public/cpp/utility",
    "//mojo/environment:chromium",
    "//mojo/public/interfaces/bindings/tests:test_interfaces",
    "//services/js/modules/clock/test",
  ]
}
